--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  
-  <base href="/ydsbankweb/">
-  
+  <base href="/">
+
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -37,7 +36,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=2207657899');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=972950023');
       });
     }
   </script>
